add delete view

--- a/office/templates/office/analysts-list.html
+++ b/office/templates/office/analysts-list.html
@@ -13,7 +13,7 @@
             </div>
             <div class="card-body px-0 pt-0 pb-2">
                 <div class="table-responsive p-0">
-                    {% if analayts.count.bit_length < 0 %}
+                    {% if analayts.count < 0 %}
 
                         <p>لا توجد بيانات</p>
                     {% else %}
@@ -56,6 +56,8 @@
                                     <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">البريد الألكترونى</th>
                                     <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">الحساب على تويتر </th>
                                     <th class="text-secondary opacity-7"></th>
+                                    <th class="text-secondary opacity-7"></th>
+
                                 </tr>
                             </thead>
                             <tbody>
@@ -92,6 +94,9 @@
                                         <td class="ms-auto text-start">
                                             <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'analyst-details' item.pk %}"><i class="fas fa-pencil-alt text-primary me-2" aria-hidden="true"></i>المزيد</a>
 
+                                        </td>
+                                     <td class="ms-auto text-start">
+                                            <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'analyst-delete' item.pk %}"><i class="fas fa-trash text-danger me-2" aria-hidden="true"></i>حذف</a>
                                         </td>
 
 
