--- a/templates/partials/_ownerTable.html
+++ b/templates/partials/_ownerTable.html
@@ -22,7 +22,7 @@
             {% for item in arrows %}
                 <tr>
                     <td class="align-middle text-center text-xxs">
-                        <a href="{% url 'owner-profile' item.pk %}">
+                        <a href="{% url 'owner-profile' item.id %}">
                             <p class="text-xxs  mb-0">{{ item.name }}</p>
                         </a>
                     </td>
@@ -39,7 +39,7 @@
 
             {% if request.user.user_type == 1 or request.user.user_type == 2  %}
           <td class="ms-auto text-start">
-              <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'update-owner' item.pk %}"><i class="fas fa-pencil-alt text-primary me-2" aria-hidden="true"></i>تعديل</a>
+              <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'update-owner' item.id %}"><i class="fas fa-pencil-alt text-primary me-2" aria-hidden="true"></i>تعديل</a>
                                         </td>
             {% endif %}
                                 </tr>
