--- a/office/templates/office/company-detail.html
+++ b/office/templates/office/company-detail.html
@@ -23,13 +23,14 @@
 
     <span class="mb-2 text-xl"> <span class="text-dark font-weight-bold ms-sm-2"></span>{{ code.code }}</span>
     <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'code-update' code.pk %}"><i class="fas fa-pencil-alt text-dark me-2" aria-hidden="true"></i>تعديل</a>
+        <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'code-delete' code.pk %}"><i class="fas fa-trash text-danger me-2" aria-hidden="true"></i>حذف</a>
     </div>
 
                         {% endfor %}
                     </div>
                     <div class="ms-auto text-end">
                        {% if request.user.user_type == 1 %}
-                        <a class="btn btn-link text-danger  px-3 mb-0" href="#"><i class="far fa-trash-alt text-danger me-2" aria-hidden="true"></i>مسح</a>
+                        <a class="btn btn-link text-danger  px-3 mb-0" href="{% url 'company-delete' company.pk %}"><i class="far fa-trash-alt text-danger me-2" aria-hidden="true"></i>حذف</a>
                        {% endif %}
                         <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'company-update' company.pk %}"><i class="fas fa-pencil-alt text-dark me-2" aria-hidden="true"></i>تعديل</a>
                     </div>
