--- a/office/templates/office/expectation-list.html
+++ b/office/templates/office/expectation-list.html
@@ -81,6 +81,9 @@
                             <th class="text-center text-dark text-xxs" style="width: 2rem;">
                                 المرفق
                             </th>
+                            <th class="text-center text-dark text-xxs">
+
+                            </th>
                         </tr>
                         </thead>
                         <tbody>
@@ -129,7 +132,9 @@
                                    <a href="{{ item.report }}"><i class="fas fa-file-pdf text-xxs" aria-hidden="true"></i></a>
                                 </td>
 
-
+      <td class="ms-auto text-start">
+                                            <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'expect-delete' item.pk %}"><i class="fas fa-trash text-danger me-2" aria-hidden="true"></i>حذف</a>
+                                        </td>
                             </tr>
                         {% endfor %}
 
