--- a/office/templates/office/rates-list.html
+++ b/office/templates/office/rates-list.html
@@ -13,7 +13,7 @@
             </div>
             <div class="card-body px-0 pt-0 pb-2">
                 <div class="table-responsive p-0">
-                    {% if rates.count.as_integer_ratio < 0 %}
+                    {% if rates.count < 0 %}
 
                         <p>لا توجد بيانات</p>
                     {% else %}
