--- a/templates/partials/_analystTable.html
+++ b/templates/partials/_analystTable.html
@@ -32,7 +32,7 @@
                                             <span class="badge badge-sm bg-gradient-secondary">{{ item.CurrentJob }}</span>
                                         </td>
                                         <td>
-                                            <p class="text-xs font-weight-bold mb-0"><a href="{% url 'user-old-company' item.pk %}" class="cursor-pointer"><i class="fas fa-briefcase"></i>المزيد</a></p>
+                                            <p class="text-xs font-weight-bold mb-0"><a href="{% url 'user-old-company' item.id %}" class="cursor-pointer"><i class="fas fa-briefcase"></i>المزيد</a></p>
                                         </td>
                                         <td>
                                             <p class="text-xs font-weight-bold mb-0">{{ item.phone }}</p>
@@ -43,7 +43,7 @@
                                         </td>
 
                                         <td class="ms-auto text-start">
-                                            <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'user-interface' item.pk %}"><i class="fas fa-pencil-alt text-primary me-2" aria-hidden="true"></i>المزيد</a>
+                                            <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'user-interface' item.id %}"><i class="fas fa-pencil-alt text-primary me-2" aria-hidden="true"></i>المزيد</a>
 
                                         </td>
 
