--- a/templates/partials/_expectTable.html
+++ b/templates/partials/_expectTable.html
@@ -37,12 +37,12 @@
                             <tr>
                                 <td class="d-flex" style="justify-content: space-around; ">
                                     {% if request.user.user_type == 3 %}
-                                     <a  href="{% url 'add_wish' item.CompanyEntered.pk %}" style="margin-inline:0.2 ;">
+                                     <a  href="{% url 'add_wish' item.CompanyEntered.id %}" style="margin-inline:0.2 ;">
                                        <i class="far fa-bookmark"></i>
 </a>
 
 {% endif %}
-                                    <a href="{% url 'user-company' item.CompanyEntered.pk %}">
+                                    <a href="{% url 'user-company' item.CompanyEntered.id %}">
 
                                <p class="text-xxs">{{ item.CompanyEntered.name }}</p>
 </a>
@@ -50,7 +50,7 @@
                        </td>
                                 <td>
 
-                                        <a href="{% url 'user-research' item.ResearchCompany.pk %}">
+                                        <a href="{% url 'user-research' item.ResearchCompany.id %}">
 
                                                         <p class="text-xxs  mb-0">{{ item.ResearchCompany.name }}</p>
                                                              </a>
