--- a/office/templates/office/expectation-list.html
+++ b/office/templates/office/expectation-list.html
@@ -133,6 +133,8 @@
                                 </td>
 
       <td class="ms-auto text-start">
+                                                      <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'expect-update' item.pk %}"><i class="fas fa-pencil-alt text-success"></i>تعديل</a>
+
                                             <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'expect-delete' item.pk %}"><i class="fas fa-trash text-danger me-2" aria-hidden="true"></i>حذف</a>
                                         </td>
                             </tr>
