--- a/templates/partials/_rateMoreDetails.html
+++ b/templates/partials/_rateMoreDetails.html
@@ -6,7 +6,7 @@
                                                    الشركة
                                                 </th>
   <th class="text-center text-xxs sent" >
-                                                   شؤكة الأبحاث
+                                                   شركة الأبحاث
                                                 </th>
 
                                                 <th class="text-center   text-xxs sent">
