--- a/userInterface/templates/userInterface/expect-list.html
+++ b/userInterface/templates/userInterface/expect-list.html
@@ -49,6 +49,13 @@
                 {% include 'partials/_pagination.html' with page_obj=expects only %}
 
             </div>
+          <div class="card-footer">
+              <div class="row justify-content-between">
+                  <div class="col-4">
+                      <a href="{% url 'all_expect' %}" class="btn btn-sm btn-round bg-maal text-white">المزيد</a>
+                  </div>
+              </div>
+          </div>
           </div>
          </div>
 
