--- a/office/templates/office/add-company.html
+++ b/office/templates/office/add-company.html
@@ -1,5 +1,6 @@
 {% extends 'main.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block title %}
 شركات
@@ -24,61 +25,8 @@
                         <div class="card-body px-1 pb-0">
                             <form method="post" enctype="multipart/form-data">
                              {% csrf_token %}
-                                <div class="form-group row ">
-                                    <div class="col-10 d-flex flex-column">
-                                        <label for="name">
-                                            إسم الشركة
-                                        </label>
-                                        <input id="name" name="name" type="text" class="form-control text-black-50"  />
+                                {{ form|crispy }}
 
-                                    </div>
-                                </div>
-                                 <div class="form-group row ">
-                                    <div class="col-10 d-flex flex-column">
-                                        <label for="name">
-                                            شعار الشركة
-                                        </label>
-                                        <input id="logo" name="logo" type="file" class="form-control text-black-50"  />
-
-                                    </div>
-                                </div>
-                                <div class="form-group row ">
-                                    <div class="col-10 d-flex flex-column">
-                                        <label for="category">
-                                             القطاع
-                                        </label>
-<select name="category" id="category" class="form-control text-black-50" >
-  {% for category in categories %}
-          <option value="{{ category.pk }}">{{ category.name }}</option>
-    {% endfor  %}
-</select>
-                                    </div>
-                                </div>
-                                 <div class="form-group row ">
-                                    <div class="col-10 d-flex flex-column">
-                                        <label for="link">
-                                            المسار                                        </label>
-                                        <input id="link" name="link" type="url" class="form-control text-black-50"  />
-
-                                    </div>
-                                </div>
-
-                                <div class="form-group row ">
-                                    <div class="col-10 d-flex flex-column">
-                                        <label for="totalArrow">
-                                            إجمالى عدد الأسهم                                        </label>
-                                        <input id="totalArrow" name="totalArrow" type="number" class="form-control text-black-50" placeholder="إجمالى عدد الأسهم  "  />
-
-                                    </div>
-                                </div>
-                                <div class="form-group row ">
-                                    <div class="col-10 d-flex flex-column">
-                                        <label for="arrowPrice">
-                                            سعر السهم                                        </label>
-                                        <input id="arrowPrice" name="arrowPrice" type="number" class="form-control text-black-50" placeholder="سعر السهم  "  />
-
-                                    </div>
-                                </div>
                                 <div class="form-group row ">
                                     <div class="col-10 d-flex flex-column justify-content-center">
                                             <input type="submit" class="btn btn-primary text-black-50 bg-maal" value="إضافة"/>
