--- a/office/templates/office/add-rate.html
+++ b/office/templates/office/add-rate.html
@@ -1,6 +1,6 @@
 {% extends 'main.html' %}
 {% load static %}
-
+{% load crispy_forms_tags %}
 {% block title %} التقييم البحثى {% endblock title %}
 
 
@@ -23,111 +23,7 @@
                             <div class="card-body px-1 pb-0">
                                 <form method="post" enctype="multipart/form-data">
                                     {% csrf_token %}
-                                    <div class="form-group row ">
-                                        <div class="col-10 d-flex flex-column">
-                                            <label for="CompanyEntered">
-                                                الشركة
-                                                المدرجة
-                                            </label>
-                                            <select name="CompanyEntered" id="CompanyEntered"
-                                                    class="form-control text-black-50">
-                                                {% for company in companies %}
-                                                    <option value="{{ company.pk }}">{{ company.name }}</option>
-
-                                                {% endfor %}
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="form-group row ">
-                                        <div class="col-10 d-flex flex-column">
-                                            <label for="ResearchCompany">
-                                                شركة الأبحاث
-                                            </label>
-                                            <select name="ResearchCompany" id="ResearchCompany"
-                                                    class="form-control text-black-50">
-                                                {% for company in researches %}
-                                                    <option value="{{ company.pk }}">{{ company.name }}</option>
-                                                {% endfor %}
-                                            </select></div>
-                                    </div>
-                                    <div class="form-group row ">
-                                        <div class="col-10 d-flex flex-column">
-                                            <label for="AnalayticName">
-                                                إسم المحلل
-                                            </label>
-                                            <select name="AnalayticName" id="AnalayticName"
-                                                    class="form-control text-black-50">
-                                                {% for analyst in analysts %}
-                                                    <option value="{{ analyst.pk }}">{{ analyst.name }}</option>
-                                                {% endfor %}
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="form-group row ">
-                                        <div class="col-10 d-flex flex-column">
-                                            <label for="Recommendation">
-                                                التوصية
-                                            </label>
-                                            <select id="Recommendation" name="Recommendation"
-                                                    class="form-control text-black-50">
-                                                <option value="3">محايد</option>
-                                                <option value="1">زيادة الوزن</option>
-                                                <option value="2">تخفيض الوزن</option>
-                                            </select>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group row ">
-                                        <div class="col-10 d-flex flex-column">
-                                            <label for="FairValue">
-                                                القيمة العادلة
-                                            </label>
-                                            <input id="FairValue" name="FairValue" type="text"
-                                                   class="form-control text-black-50"
-                                                   placeholder="بالريال السعودى"/>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group row ">
-                                        <div class="col-10 d-flex flex-column">
-                                            <label for="CurrenncyValue">
-                                                السعر وقت التوصية
-                                            </label>
-                                            <input id="CurrenncyValue" name="CurrenncyValue" type="text"
-                                                   class="form-control text-black-50"
-                                                   placeholder="بالريال السعودى"/>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group row ">
-                                        <div class="col-10 d-flex flex-column">
-                                            <label for="MarketValue">
-                                                السعر السوقى
-                                            </label>
-                                            <input id="MarketValue" name="MarketValue" type="text"
-                                                   class="form-control text-black-50" asp-for="MarketValue"
-                                                   placeholder="بالريال السعودى"/>
-                                        </div>
-                                    </div>
-                                    <div class="form-group row ">
-                                        <div class="col-10 d-flex flex-column">
-                                            <label for="rdate">
-                                                تاريخ التوصية
-                                            </label>
-                                            <input id="rdate" name="rdate" type="date"
-                                                   class="form-control text-black-50" placeholder="   تاريخ التوصية"/>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group row ">
-                                        <div class="col-10 d-flex flex-column">
-                                            <label for="report">
-                                                التقرير
-                                            </label>
-                                            <input name="report" id="report" type="file"
-                                                   class="form-control text-black-50" placeholder="التقرير"/>
-                                        </div>
-                                    </div>
+                                 {{ form|crispy }}
                                     <div class="form-group row ">
                                         <div class="col-10 d-flex flex-column justify-content-center">
                                             <input type="submit" class="btn btn-primary text-black-50 bg-maal"
