--- a/office/templates/office/edit-expect.html
+++ b/office/templates/office/edit-expect.html
@@ -1,15 +1,15 @@
 {% extends 'main.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
-{% block title %}
-    المحللين المالين
-{% endblock %}
+
+{% block title %} توقعات الأبحاث {% endblock title %}
+
 
 {% block body %}
     <div class="col-12 mt-4">
         <div class="card mb-4">
             <div class="card-header pb-0 p-3">
-                <h6 class="mb-1 text-bolder">{{ analyst.name }}تعديل </h6>
+                <h6 class="mb-1 text-bolder">تعديل</h6>
             </div>
             <div class="card-body p-3">
                 <div class="row">
@@ -22,10 +22,9 @@
 
                         </div>
                             <div class="card-body px-1 pb-0">
-                                <form method="post">
+                                <form method="post" enctype="multipart/form-data">
                                     {% csrf_token %}
-                                                                 {{ form|crispy }}
-
+                                                  {{ form|crispy }}
                                     <div class="form-group row ">
                                         <div class="col-10 d-flex flex-column justify-content-center">
                                             <input type="submit" class="btn btn-primary text-black-50 bg-maal"
