--- a/templates/partials/_companyArrowsOwnersTable.html
+++ b/templates/partials/_companyArrowsOwnersTable.html
@@ -44,7 +44,7 @@
 
                     </td>
                     <td class="align-middle text-center text-xxs">
-                     <p class="text-xxs">{{ item.arrowPrice  }}</p>
+                     <p class="text-xxs">{{ item.company.arrow_value  }}</p>
                     </td>
                    <td class="align-middle text-center text-xxs">
                      <p class="text-xxs">{{ item.TotalArrowPrice  }}</p>
